monticore-generator/src/test/resources/cocos/invalid/A4024/A4024_d.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4024;

grammar A4024_d {

  A;

  Super = c:"state";

  Sub extends Super = c:A;
}
